# --
# Changes of OTRS
# Copyright (C) 2001-2004 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.133 2004-12-23 11:51:54 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS head
 - (2004/12/04) moved PGP and SMIME stuff to Kernel/System/Email.pm
    to be more generic
 - (2004/11/27) added config option TicketHookDivider
    [Kernel/Config.pm]
    # (the divider between TicketHook# and number)
    $Self->{TicketHookDivider} = ': ';
#    $Self->{TicketHookDivider} = '';
    [...]
 - (2004/11/24) renamed from bin/SendStats.pl to bin/mkStats.pl and added
    fs output e. g.
    shell> bin/mkStats.pl -m NewTickets -p 'Month=1&Year=2003' -r me@host.com -b text
    NOTICE: Email sent to 'me@host.com'
    shell> bin/mkStats.pl -m NewTickets -p 'Month=1&Year=2003'  -o /data/dir
    NOTICE: Writing file /data/dir/NewTickets_2004-11-24_14-38.csv
    shell>
 - (2004/11/24) added postmaster filter to
 - (2004/11/16) a xml 2 sql processor which is using Kernel/System/DB.pm
    and Kernel/System/DB/*.pm' bin/xml2sql.pl to generate database based
    sql syntax
 - (2004/11/16) moved database settings from Kernel/System/DB.pm to
    Kernel/System/DB/*.pm (mysql|postgresql|maxdb|oracle|db2)
 - (2004/11/16) added fast cgi (fcgi) handle to (bin/fcgi-bin/*.pl)
 - (2004/11/16) splited cgi-handle to handle (bin/cgi-bin/*.pl) and
    modules (Kernel/System/Web/Interface*.pm)
 - (2004/11/16) renamed Kernel/System/WebUploadCache.pm to
    Kernel/System/Web/UploadCache.pm
 - (2004/11/16) renamed Kernel/System/WebRequest.pm to
    Kernel/System/Web/Request.pm
 - (2004/11/07) added LOWER() in sql like queries to search, now searches
    are case insensitive in postgresql and maxdb
 - (2004/11/04) added new feature so show ticket history reverse
    [Kernel/Config.pm]
    # Agent::HistoryOrder